service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx
  annotations:
    cloud.google.com/backend-config: '{"ports": {"80":"nginx"}}'
spec:
  type: NodePort
  selector:
    app: nginx
  ports:
  - port: 80
    targetPort: 80
