ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx
  annotations:
    kubernetes.io/ingress.class: "gce"
    networking.gke.io/v1beta1.FrontendConfig: nginx
    networking.gke.io/managed-certificates: nginx
spec:
  defaultBackend:
    service:
      name: nginx
      port:
        number: 80
